# Pseudo-Entertainment

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  langgraph.json  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: backlog.md  bug-report.md  error-report.md
.github/workflows/: lint.yml
agent_teams/content_checker/: test.py
agent_teams/instagram_uploader/: core.py  test.py
agent_teams/manager_agent/: workflow.py
agent_teams/manager_agent/modules/: chain.py  core.py  state.py
agent_teams/post_agent/modules/: base.py  model.py  prompt.py
agents/: __init__.py  base_graph.py  base_node.py  base_sub_graph.py  base_workflow.py  condition.py  main_graph.py  main_state.py  main_workflow.py  model.py  models.py  workflow.py
agents/image/: README.md  __init__.py  pyproject.toml  workflow.py
agents/image/modules/: chains.py  conditions.py  models.py  nodes.py  prompts.py  state.py  tools.py  utils.py
agents/management/: pyproject.toml  workflow.py
agents/management/modules/: chains.py  conditions.py
agents/manager/: workflow.py
agents/manager/modules/: conditions.py  core.py  cores.py  graph_state.py  prompt.py
agents/manager_agent/: chain.py  nodes.py  sub_graph.py
agents/music/: README.md  __init__.py  pyproject.toml  workflow.py
agents/music/api_server/: server.py
agents/music/modules/: chains.py  conditions.py  models.py  nodes.py  prompts.py  state.py  tools.py  utils.py
agents/persona_agent/: chain.py  nodes.py  prompt.py  sub_graph.py
agents/text/: README.md  __init__.py  pyproject.toml  workflow.py
agents/text/modules/: chain.py  chains.py  conditions.py  core.py  cores.py  models.py  nodes.py  persona.py  prompts.py  state.py  tools.py  utils.py
agents/text_agent/: chain.py  nodes.py
tests/integration_tests/: __init__.py  test_graph.py  test_graph_music.py
tests/unit_tests/: __init__.py  test_configuration.py  test_node.py
