[project]
name = "pseudo-entertainment-company"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.23",
    "langchain-openai>=0.3.12",
    "langgraph>=0.3.27",
    "langgraph-api>=0.0.48",
    "langgraph-cli[inmem]>=0.1.89",
]
