[project]
name = "pseudo-entertainment-text"
version = "0.0.1"
description = "Text Package"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain>=0.3.23",
    "langgraph>=0.3.27",
    "langchain-community>=0.2.17",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "langgraph-cli[inmem]>=0.2.3",
]